--- a/branches/xna2_update/RC.Gui/RC.Gui/RC.Gui.csproj
+++ b/branches/xna2_update/RC.Gui/RC.Gui/RC.Gui.csproj
@@ -1,18 +1,16 @@
 ﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{004293A3-2614-46BC-8B27-7500933272F2}</ProjectGuid>
-    <ProjectTypeGuids>{9F340DF3-2AED-4330-AC16-78AC2D9B4738};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <ProjectGuid>{A6C11525-E401-4105-8DE9-481DC503176C}</ProjectGuid>
+    <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RC.Gui</RootNamespace>
     <AssemblyName>RC.Gui</AssemblyName>
-    <XnaFrameworkVersion>v1.0</XnaFrameworkVersion>
+    <XnaFrameworkVersion>v2.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XNAGlobalContentPipelineAssemblies>Microsoft.Xna.Framework.Content.Pipeline.EffectImporter.dll;Microsoft.Xna.Framework.Content.Pipeline.FBXImporter.dll;Microsoft.Xna.Framework.Content.Pipeline.TextureImporter.dll;Microsoft.Xna.Framework.Content.Pipeline.XImporter.dll</XNAGlobalContentPipelineAssemblies>
-    <XNAProjectContentPipelineAssemblies>
-    </XNAProjectContentPipelineAssemblies>
+    <XnaCrossPlatformGroupID>40dea235-499b-4ad5-b741-6ec0d848b792</XnaCrossPlatformGroupID>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -38,139 +36,59 @@
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Xna.Framework">
+    <Reference Include="Microsoft.Xna.Framework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=6d5c3888ef60e27d, processorArchitecture=x86">
       <Private>False</Private>
+      <SpecificVersion>True</SpecificVersion>
     </Reference>
-    <Reference Include="Microsoft.Xna.Framework.Game">
+    <Reference Include="Microsoft.Xna.Framework.Game, Version=2.0.0.0, Culture=neutral, PublicKeyToken=6d5c3888ef60e27d, processorArchitecture=MSIL">
       <Private>False</Private>
+      <SpecificVersion>True</SpecificVersion>
     </Reference>
     <Reference Include="mscorlib">
       <Private>False</Private>
     </Reference>
-    <Reference Include="RC.Engine, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\x86\RC.Engine.dll</HintPath>
-    </Reference>
-    <Reference Include="RC.Input, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Dependencies\x86\RC.Input.dll</HintPath>
-    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\Control Subclasses\RCButton.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCButton</Name>
-    </Compile>
-    <Compile Include="Controls\Control Subclasses\RCCheckBox.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCCheckBox</Name>
-    </Compile>
-    <Compile Include="Controls\Control Subclasses\RCImage.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCImage</Name>
-    </Compile>
-    <Compile Include="Controls\Control Subclasses\RCLabel.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCLabel</Name>
-    </Compile>
-    <Compile Include="Controls\Control Subclasses\RCRadioButton.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCRadioButton</Name>
-    </Compile>
-    <Compile Include="Controls\Control Subclasses\RCSpinner.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCSpinner</Name>
-    </Compile>
-    <Compile Include="Controls\Control Subclasses\RCTextBox.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCTextBox</Name>
-    </Compile>
-    <Compile Include="Controls\Control Subclasses\TestControl.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>TestControl</Name>
-    </Compile>
-    <Compile Include="Controls\RCControl.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCControl</Name>
-    </Compile>
-    <Compile Include="Controls\RCControlGroup.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCControlGroup</Name>
-    </Compile>
-    <Compile Include="Controls\RCControlManager.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCControlManager</Name>
-    </Compile>
-    <Compile Include="Controls\RCControl_Enumerations.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCControl_Enumerations</Name>
-    </Compile>
-    <Compile Include="Controls\RCRadioChannel.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCRadioChannel</Name>
-    </Compile>
-    <Compile Include="FlatSpatial.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>FlatSpatial</Name>
-    </Compile>
-    <Compile Include="Fonts\BitmapFont.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>BitmapFont</Name>
-    </Compile>
-    <Compile Include="Fonts\FontManager.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>FontManager</Name>
-    </Compile>
-    <Compile Include="Game.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>Game</Name>
-    </Compile>
-    <Compile Include="GUIEvent.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>GUIEvent</Name>
-    </Compile>
-    <Compile Include="GuiInputScheme.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>GuiInputScheme</Name>
-    </Compile>
-    <Compile Include="IGUIElement.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>IGUIElement</Name>
-    </Compile>
-    <Compile Include="Panes\RCPane.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCPane</Name>
-    </Compile>
-    <Compile Include="Primitives\Quad.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>Quad</Name>
-    </Compile>
-    <Compile Include="Primitives\Text.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>Text</Name>
-    </Compile>
+    <Compile Include="Controls\Control Subclasses\RCButton.cs" />
+    <Compile Include="Controls\Control Subclasses\RCCheckBox.cs" />
+    <Compile Include="Controls\Control Subclasses\RCImage.cs" />
+    <Compile Include="Controls\Control Subclasses\RCLabel.cs" />
+    <Compile Include="Controls\Control Subclasses\RCRadioButton.cs" />
+    <Compile Include="Controls\Control Subclasses\RCSpinner.cs" />
+    <Compile Include="Controls\Control Subclasses\RCTextBox.cs" />
+    <Compile Include="Controls\Control Subclasses\TestControl.cs" />
+    <Compile Include="Controls\RCControl.cs" />
+    <Compile Include="Controls\RCControlGroup.cs" />
+    <Compile Include="Controls\RCControlManager.cs" />
+    <Compile Include="Controls\RCControl_Enumerations.cs" />
+    <Compile Include="Controls\RCRadioChannel.cs" />
+    <Compile Include="FlatSpatial.cs" />
+    <Compile Include="Fonts\BitmapFont.cs" />
+    <Compile Include="Fonts\FontManager.cs" />
+    <Compile Include="Game.cs" />
+    <Compile Include="GUIEvent.cs" />
+    <Compile Include="GuiInputScheme.cs" />
+    <Compile Include="IGUIElement.cs" />
+    <Compile Include="Panes\RCPane.cs" />
+    <Compile Include="Primitives\Quad.cs" />
+    <Compile Include="Primitives\Text.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RCUIManager.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>RCUIManager</Name>
-    </Compile>
-    <Compile Include="ScreenScene.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>ScreenScene</Name>
-    </Compile>
-    <Compile Include="TemporaryAttributes.cs">
-      <XNAUseContentPipeline>false</XNAUseContentPipeline>
-      <Name>TemporaryAttributes</Name>
-    </Compile>
+    <Compile Include="RCUIManager.cs" />
+    <Compile Include="ScreenScene.cs" />
+    <Compile Include="TemporaryAttributes.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <NestedContentProject Include="Content\Content.contentproj">
+      <Project>fd64d028-d107-45d1-a03b-b3cc6684bb81</Project>
+      <Visible>False</Visible>
+    </NestedContentProject>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.ContentPipeline.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.Common.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\v2.0\Microsoft.Xna.GameStudio.Common.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\v2.0\Microsoft.Xna.GameStudio.NestedContent.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -178,7 +96,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)$(OutDir)*" "$(ProjectDir)..\..\Dependencies\x86"  /i /d /y</PostBuildEvent>
-  </PropertyGroup>
 </Project>
